--- a/.github/workflows/tokenize.yml
+++ b/.github/workflows/tokenize.yml
@@ -26,5 +26,5 @@ jobs:
       - uses: actions/checkout@v3
 
       # Runs a single command using the runners shell
-      - name: transpile tokens
-        run: npm run start
+      - name: transpiletokens
+        run: npm run tokenize
