--- a/.github/workflows/tokenize.yml
+++ b/.github/workflows/tokenize.yml
@@ -27,4 +27,5 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: transpiletokens
-        run: npm run tokenize
+      -  run: npm i -g design-tokens-cli
+      -  run: npm run tokenize
