--- a/.github/workflows/tokenize.yml
+++ b/.github/workflows/tokenize.yml
@@ -19,5 +19,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      -  run: npm i -g design-tokens-cli
-      -  run: npm run tokenize
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 12
+      - run: npm install
+      - run: npm run tokenize
+      - uses: JS-DevTools/npm-publish@v1
+        with:
+          token: ${{ secrets.NPM_ACCESS_TOKEN }}
