--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tokens",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "design.token.css",
   "scripts": {
     "tokenize": "designTokens transform"
   },
